[gd_scene load_steps=13 format=3 uid="uid://dkgr7xaotvtj7"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_mmgml"]
[ext_resource type="Texture2D" uid="uid://bbhlwjsofma8i" path="res://hdrihaven_com_kiara_3_morning.jpg" id="1_owmqe"]
[ext_resource type="Texture2D" uid="uid://vp38tf4vcws7" path="res://TexturesCom_Roads0069_1_seamless_S.jpg" id="3_uqlyr"]
[ext_resource type="Texture2D" uid="uid://crqj588oj7iab" path="res://cerca.png" id="4_dnrtc"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_hja8y"]
panorama = ExtResource("1_owmqe")

[sub_resource type="Sky" id="Sky_gq7u7"]
sky_material = SubResource("PanoramaSkyMaterial_hja8y")

[sub_resource type="Environment" id="Environment_btru4"]
background_mode = 2
sky = SubResource("Sky_gq7u7")

[sub_resource type="Curve3D" id="Curve3D_ertb8"]
_data = {
"points": PackedVector3Array(5.91979, 0, 12.0987, -5.91979, 0, -12.0987, 5.44053, -3.62396e-05, 19.0005, 0, 0, 0, 0, 0, 0, 5.79836, -3.62396e-05, -18.215, 0, 0, 0, 0, 0, 0, 5.44053, -3.62396e-05, -32.5286, 0, 0, 0, 0, 0, 0, 7.22973, -3.62396e-05, -47.9158, 0, 0, 0, 0, 0, 0, 14.3865, -3.62396e-05, -59.3667, 0, 0, 0, 0, 0, 0, 21.1855, -3.62396e-05, -63.6608, 0, 0, 0, 0, 0, 0, 39.7933, -3.62396e-05, -68.3127, 0, 0, 0, 0, 0, 0, 59.1167, -3.62396e-05, -72.9646, 0, 0, 0, 0, 0, 0, 89.891, -3.62396e-05, -71.8911, 0, 0, 0, 0, 0, 0, 116.729, -3.62396e-05, -64.0186, 0, 0, 0, 0, 0, 0, 129.969, -3.62396e-05, -55.0726, 0, 0, 0, 0, 0, 0, 149.65, -3.62396e-05, -37.8962, 0, 0, 0, 0, 0, 0, 159.312, -3.62396e-05, -17.4993, 0, 0, 0, 0, 0, 0, 166.111, -3.62396e-05, 5.0447, -3.08649, 0, -6.43804, 3.08649, 0, 6.43804, 178.278, -3.62396e-05, 29.3779, -11.5405, 0, 4.15364, 11.5405, 0, -4.15364, 202.802, -3.62396e-05, 43.4283, -0.639984, 0, 5.38902, 0.639984, 0, -5.38902, 229.091, -3.62396e-05, 11.8437, 0.347412, 0, 10.2366, -0.347412, 0, -10.2366, 238.753, -3.62396e-05, -32.8864, 3.93787, 0, 5.70293, -3.93787, 0, -5.70293, 236.248, -3.62396e-05, -70.8176, 16.8045, 0, 10.4163, -16.8045, 0, -10.4163, 214.778, -3.62396e-05, -99.4449, 6.37289, 0, 2.41611, -6.37289, 0, -2.41611, 177.92, -3.62396e-05, -115.906, 0, 0, 0, 0, 0, 0, 115.298, -3.62396e-05, -123.778, 0, 0, 0, 0, 0, 0, 25.1218, -3.62396e-05, -123.062, 6.68946, 0, -7.43202, -6.68946, 0, 7.43202, -54.9792, 9.27872, -118.735, 7.16239, 0, -8.39211, -7.16239, 0, 8.39211, -91.2104, 11.3954, -81.4596, 18.3497, 0, -26.4255, -18.3497, 0, 26.4255, -113.903, 10.8445, -50.0105, -8.48724, 0, -12.699, 8.48724, 0, 12.699, -122.309, -3.62396e-05, 5.0447, 6.77841, 0, -17.5963, -6.77841, 0, 17.5963, -127.676, -3.62396e-05, 50.1327, -15.8027, 0, 0.143906, 15.8027, 0, -0.143906, -116.583, -3.62396e-05, 83.4119, -10.4367, 0, 0.100555, 10.4367, 0, -0.100555, -45.8599, 14.5197, 91.4164, -12.0362, 0, 0.847168, 12.0362, 0, -0.847168, -14.0943, 12.8251, 93.6432, -4.8115, 0, 8.0294, 4.8115, 0, -8.0294, 16.8914, -3.62396e-05, 78.76, -0.420238, 0, 8.00679, 0.420238, 0, -8.00679, 14.7444, -3.62396e-05, 53.3532, 1.76695, 0, 2.64404, -1.76695, 0, -2.64404, 11.5238, -3.62396e-05, 31.1671, 0, 0, 0, 0, 0, 0, 5.44053, -3.62396e-05, 19.0005),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 35

[sub_resource type="Curve3D" id="Curve3D_1ye1o"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -10.2559, -3.62396e-05, 1.18263, 0, 0, 0, 0, 0, 0, -9.71861, -3.62396e-05, -4.28021, 0, 0, 0, 0, 0, 0, -8.5544, -3.62396e-05, -12.6088, 0, 0, 0, 0, 0, 0, -7.12152, -3.62396e-05, -17.9821, 0, 0, 0, 0, 0, 0, -7.47974, -3.62396e-05, -22.3703, 0, 0, 0, 0, 0, 0, -7.7484, -3.62396e-05, -29.8033, 0, 0, 0, 0, 0, 0, -6.8582, -3.62396e-05, -36.6389, 0, 0, 0, 0, 0, 0, -6.14176, -3.62396e-05, -43.6241, 0, 0, 0, 0, 0, 0, -6.14176, -3.62396e-05, -47.2959, 0, 0, 0, 0, 0, 0, -5.51487, -3.62396e-05, -50.5199, 0, 0, 0, 0, 0, 0, -2.82823, -3.62396e-05, -54.5498, 0, 0, 0, 0, 0, 0, 0.306182, -3.62396e-05, -59.6545, 0, 0, 0, 0, 0, 0, 4.38162, -3.62396e-05, -65.1071, 0, 0, 0, 0, 0, 0, 10.3512, -3.62396e-05, -69.8539, 0, 0, 0, 0, 0, 0, 20.8989, -3.62396e-05, -72.9504, 0, 0, 0, 0, 0, 0, 30.0434, -3.62396e-05, -75.1761, 0, 0, 0, 0, 0, 0, 38.4088, -3.62396e-05, -77.1847, 0, 0, 0, 0, 0, 0, 48.1823, -3.62396e-05, -79.6039, 0, 0, 0, 0, 0, 0, 56.5043, -3.62396e-05, -80.6684, 0, 0, 0, 0, 0, 0, 72.4629, -3.62396e-05, -80.1848, 0, 0, 0, 0, 0, 0, 83.7444, -3.62396e-05, -79.6008, 0, 0, 0, 0, 0, 0, 87.6919, -3.62396e-05, -79.3163, 0, 0, 0, 0, 0, 0, 113.266, -3.62396e-05, -71.7836, 0, 0, 0, 0, 0, 0, 122.157, -3.62396e-05, -67.0537, 0, 0, 0, 0, 0, 0, 128.563, -3.62396e-05, -62.4928, 0, 0, 0, 0, 0, 0, 133.99, -3.62396e-05, -57.8631, 0, 0, 0, 0, 0, 0, 143.924, -3.62396e-05, -48.9732, 0, 0, 0, 0, 0, 0, 151.082, -3.62396e-05, -42.7178, 0, 0, 0, 0, 0, 0, 156.709, -3.62396e-05, -30.7626, 0, 0, 0, 0, 0, 0, 162.874, -3.62396e-05, -17.307, 0, 0, 0, 0, 0, 0, 165.551, -3.62396e-05, -7.09691, 0, 0, 0, 0, 0, 0, 169.903, -3.62396e-05, 5.6587, 0, 0, 0, 0, 0, 0, 173.955, -3.62396e-05, 13.0187, 0, 0, 0, 0, 0, 0, 177.83, -3.62396e-05, 21.5814, -7.92291, 0, 2.48887, 7.92291, 0, -2.48887, 194.98, -3.62396e-05, 36.1928, 0, 0, 0, 0, 0, 0, 211.275, -3.62396e-05, 19.452, 0, 0, 0, 0, 0, 0, 215.949, -3.62396e-05, 11.0922, 0, 0, 0, 0, 0, 0, 218.212, -3.62396e-05, 1.54858, 0, 0, 0, 0, 0, 0, 218.96, -3.62396e-05, -2.40506, 0, 0, 0, 0, 0, 0, 222.342, -3.62396e-05, -15.0093, 0, 0, 0, 0, 0, 0, 225.113, -3.62396e-05, -26.1814, 0, 0, 0, 0, 0, 0, 225.427, -3.62396e-05, -43.8695, 0, 0, 0, 0, 0, 0, 225.559, -3.62396e-05, -51.8344, 0, 0, 0, 0, 0, 0, 224.206, -3.62396e-05, -64.7056, 0, 0, 0, 0, 0, 0, 220.81, -3.62396e-05, -73.3091, 1.97128, 0, 1.33643, -1.97128, 0, -1.33643, 213.886, -3.62396e-05, -85.6709, 0, 0, 0, 0, 0, 0, 205.2, -3.62396e-05, -92.5367, 0, 0, 0, 0, 0, 0, 197.294, -3.62396e-05, -97.0143, 0, 0, 0, 0, 0, 0, 178.708, -3.62396e-05, -104.896, 0, 0, 0, 0, 0, 0, 166.794, -3.62396e-05, -108.911, 0, 0, 0, 0, 0, 0, 144.94, -3.62396e-05, -111.975, 4.80526, 0, 1.25068, -4.80526, 0, -1.25068, 124.388, 0.192309, -113.753, 1.77139, 0, -0.0921097, -1.77139, 0, 0.0921097, 95.8939, -3.62396e-05, -115.688, 0, 0, 0, 0, 0, 0, 77.3712, 0.317729, -114.964, 0, 0, 0, 0, 0, 0, 37.8435, 0.749458, -114.903, 0, 0, 0, 0, 0, 0, 1.80034, 3.38882, -115.171, 0, 0, 0, 0, 0, 0, -16.8889, 5.17191, -114.628, 0, 0, 0, 0, 0, 0, -37.5892, 8.90495, -114.718, 0, 0, 0, 0, 0, 0, -52.8911, 10.5102, -113.231, 0, 0, 0, 0, 0, 0, -63.6963, 11.5643, -103.447, 0, 0, 0, 0, 0, 0, -78.9754, 11.9338, -87.9719, 0, 0, 0, 0, 0, 0, -88.7325, 12.4797, -77.7156, 0, 0, 0, 0, 0, 0, -98.9372, 12.4827, -65.5015, 0, 0, 0, 0, 0, 0, -110.837, 12.4664, -47.4552, 0, 0, 0, 0, 0, 0, -119.343, 11.3232, -33.7647, 0, 0, 0, 0, 0, 0, -124.92, 6.97391, -18.6626, 0, 0, 0, 0, 0, 0, -125.267, 4.15514, -11.0933, 0, 0, 0, 0, 0, 0, -121.07, 0.124607, -0.566096, 0, 0, 0, 0, 0, 0, -117.355, 0.397235, 8.45797, 0, 0, 0, 0, 0, 0, -115.408, 0.233664, 21.1824, 0, 0, 0, 0, 0, 0, -118.158, 0.0808263, 34.6169, 0, 0, 0, 0, 0, 0, -122.643, 0.0126276, 46.0746, 0, 0, 0, 0, 0, 0, -127.857, 0.41563, 62.0331, 0, 0, 0, 0, 0, 0, -128.489, 0.234856, 68.4591, 0, 0, 0, 0, 0, 0, -126.66, 0.369297, 74.3402, 0, 0, 0, 0, 0, 0, -119.482, 0.820206, 75.435, 0, 0, 0, 0, 0, 0, -100.582, 4.53562, 76.3888, 0, 0, 0, 0, 0, 0, -81.7034, 9.3027, 79.8855, 0, 0, 0, 0, 0, 0, -65.3972, 14.4067, 81.8405, 0, 0, 0, 0, 0, 0, -47.493, 17.1265, 83.5409, 0, 0, 0, 0, 0, 0, -32.6609, 16.2373, 85.6225, 0, 0, 0, 0, 0, 0, -17.8571, 14.3542, 85.8204, 0, 0, 0, 0, 0, 0, -1.80975, 7.15902, 80.1619, 0, 0, 0, 0, 0, 0, 4.23589, -3.62396e-05, 75.3254, 1.55475, 0, 2.98026, -1.55475, 0, -2.98026, 4.41954, -3.62396e-05, 68.579, 0, 0, 0, 0, 0, 0, 2.2622, -3.62396e-05, 61.7569, 0, 0, 0, 0, 0, 0, 1.49372, -3.62396e-05, 50.9786, 1.12112, 0, 1.75782, -1.12112, 0, -1.75782, -0.425061, -3.62396e-05, 36.0234, 0, 0, 0, 0, 0, 0, -4.19701, -3.62396e-05, 28.6734, 0, 0, 0, 0, 0, 0, -8.53173, -3.62396e-05, 19.2714, 0, 0, 0, 0, 0, 0, -10.687, -3.62396e-05, 5.87378, 0, 0, 0, 0, 0, 0, -10.2559, -3.62396e-05, 1.18263),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 92

[sub_resource type="Curve3D" id="Curve3D_kqssp"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 4.98806, -3.62396e-05, 1.55519, 0, 0, 0, 0, 0, 0, 5.22332, -3.62396e-05, -0.32686, 0, 0, 0, 0, 0, 0, 5.30174, -3.62396e-05, -2.18277, 0, 0, 0, 0, 0, 0, 5.45857, -3.62396e-05, -4.1171, 0, 0, 0, 0, 0, 0, 5.69746, -3.62396e-05, -5.85804, 0, 0, 0, 0, 0, 0, 5.88044, -3.62396e-05, -7.58326, 0, 0, 0, 0, 0, 0, 6.37709, -3.62396e-05, -9.36075, 0, 0, 0, 0, 0, 0, 6.53393, -3.62396e-05, -11.2689, 0, 0, 0, 0, 0, 0, 6.9783, -3.62396e-05, -13.8829, 0, 0, 0, 0, 0, 0, 7.49389, -3.62396e-05, -16.5044, 0, 0, 0, 0, 0, 0, 7.5723, -3.62396e-05, -19.8764, 0, 0, 0, 0, 0, 0, 7.5723, -3.62396e-05, -22.8041, 0, 0, 0, 0, 0, 0, 7.52003, -3.62396e-05, -27.5615, 0, 0, 0, 0, 0, 0, 7.40146, -3.62396e-05, -30.0884, 0, 0, 0, 0, 0, 0, 7.4276, -3.62396e-05, -32.5456, 0, 0, 0, 0, 0, 0, 7.95039, -3.62396e-05, -35.1072, 0, 0, 0, 0, 0, 0, 8.21179, -3.62396e-05, -39.0805, 0, 0, 0, 0, 0, 0, 8.5555, -3.62396e-05, -42.6385, 0, 0, 0, 0, 0, 0, 8.89532, -3.62396e-05, -45.4877, 0, 0, 0, 0, 0, 0, 10.8819, -3.62396e-05, -48.1539, 0, 0, 0, 0, 0, 0, 11.8947, -3.62396e-05, -49.7226, 0, 0, 0, 0, 0, 0, 13.1494, -3.62396e-05, -51.6047, 0, 0, 0, 0, 0, 0, 14.4564, -3.62396e-05, -53.4606, 0, 0, 0, 0, 0, 0, 16.1554, -3.62396e-05, -54.7937, 0, 0, 0, 0, 0, 0, 18.8914, -3.62396e-05, -56.8064, 0, 0, 0, 0, 0, 0, 22.8646, -3.62396e-05, -57.6429, 0, 0, 0, 0, 0, 0, 26.3412, -3.62396e-05, -58.6885, 0, 0, 0, 0, 0, 0, 30.8895, -3.62396e-05, -59.4726, 0, 0, 0, 0, 0, 0, 34.2876, -3.62396e-05, -60.5182, 0, 0, 0, 0, 0, 0, 39.5378, -3.62396e-05, -61.592, 0, 0, 0, 0, 0, 0, 44.8441, -3.62396e-05, -63.2127, 0, 0, 0, 0, 0, 0, 48.8174, -3.62396e-05, -63.9446, 0, 0, 0, 0, 0, 0, 53.3805, -3.62396e-05, -65.0651, 0, 0, 0, 0, 0, 0, 56.3081, -3.62396e-05, -65.2219, 0, 0, 0, 0, 0, 0, 61.6144, -3.62396e-05, -64.8298, 0, 0, 0, 0, 0, 0, 65.9536, -3.62396e-05, -64.8298, 0, 0, 0, 0, 0, 0, 70.3972, -3.62396e-05, -64.5666, 0, 0, 0, 0, 0, 0, 74.1352, -3.62396e-05, -64.3836, 0, 0, 0, 0, 0, 0, 79.3631, -3.62396e-05, -64.279, 0, 0, 0, 0, 0, 0, 82.2123, -3.62396e-05, -64.2529, 0, 0, 0, 0, 0, 0, 84.1989, -3.62396e-05, -64.0438, 0, 0, 0, 0, 0, 0, 87.6232, -3.62396e-05, -62.6584, 0, 0, 0, 0, 0, 0, 92.1156, -3.62396e-05, -61.529, 0, 0, 0, 0, 0, 0, 103.042, -3.62396e-05, -58.3922, 0, 0, 0, 0, 0, 0, 106.179, -3.62396e-05, -57.7007, 0, 0, 0, 0, 0, 0, 109.525, -3.62396e-05, -55.8709, 0, 0, 0, 0, 0, 0, 117.184, -3.62396e-05, -50.5385, 0, 0, 0, 0, 0, 0, 119.51, -3.62396e-05, -48.7348, 0, 0, 0, 0, 0, 0, 122.042, -3.62396e-05, -46.9144, 0, 0, 0, 0, 0, 0, 132.053, -3.62396e-05, -38.0792, 0, 0, 0, 0, 0, 0, 135.807, -3.62396e-05, -34.78, 0, 0, 0, 0, 0, 0, 138.081, -3.62396e-05, -32.7934, 0, 0, 0, 0, 0, 0, 139.309, -3.62396e-05, -29.7089, 0, 0, 0, 0, 0, 0, 146.489, -3.62396e-05, -14.8268, 0, 0, 0, 0, 0, 0, 147.169, -3.62396e-05, -12.997, 0, 0, 0, 0, 0, 0, 148.651, -3.62396e-05, -8.13941, 0, 0, 0, 0, 0, 0, 149.831, -3.62396e-05, -4.62307, 0, 0, 0, 0, 0, 0, 151.195, -3.62396e-05, 0.353193, 0, 0, 0, 0, 0, 0, 152.193, -3.62396e-05, 3.45653, 0, 0, 0, 0, 0, 0, 153.11, -3.62396e-05, 6.37213, 0, 0, 0, 0, 0, 0, 154.071, -3.62396e-05, 8.86986, 0, 0, 0, 0, 0, 0, 155.589, -3.62396e-05, 12.187, 0, 0, 0, 0, 0, 0, 156.904, -3.62396e-05, 14.6158, 0, 0, 0, 0, 0, 0, 166.118, -3.62396e-05, 32.7565, 0, 0, 0, 0, 0, 0, 166.118, -3.62396e-05, 32.7565, 0, 0, 0, 0, 0, 0, 173.548, -3.95775e-05, 43.0491, 0, 0, 0, 0, 0, 0, 184.638, -3.95775e-05, 50.8757, 0, 0, 0, 0, 0, 0, 197.426, -3.95775e-05, 51.4878, 0, 0, 0, 0, 0, 0, 209.057, -3.95775e-05, 45.5702, 0, 0, 0, 0, 0, 0, 218.104, -3.95775e-05, 36.1835, 0, 0, 0, 0, 0, 0, 226.811, -3.95775e-05, 22.3875, 0, 0, 0, 0, 0, 0, 231.505, -3.95775e-05, 11.7085, 0, 0, 0, 0, 0, 0, 234.572, -3.95775e-05, -0.966656, 0, 0, 0, 0, 0, 0, 238.857, -3.95775e-05, -17.0192, 0, 0, 0, 0, 0, 0, 240.46, -3.95775e-05, -29.8998, 0, 0, 0, 0, 0, 0, 240.764, -3.95775e-05, -42.6028, 0, 0, 0, 0, 0, 0, 240.797, -3.95775e-05, -61.388, 0, 0, 0, 0, 0, 0, 237.6, -3.95775e-05, -73.6315, 0, 0, 0, 0, 0, 0, 229.642, -3.95775e-05, -89.412, 0, 0, 0, 0, 0, 0, 219.328, -3.95775e-05, -101.499, 0, 0, 0, 0, 0, 0, 201.779, -3.95775e-05, -112.586, 0, 0, 0, 0, 0, 0, 180.435, -3.95775e-05, -121.138, 0, 0, 0, 0, 0, 0, 165.335, -3.95775e-05, -125.083, 0, 0, 0, 0, 0, 0, 145.555, -3.95775e-05, -127.133, 0, 0, 0, 0, 0, 0, 129.094, -3.95775e-05, -129.242, 0, 0, 0, 0, 0, 0, 97.6782, -3.95775e-05, -131.218, 0, 0, 0, 0, 0, 0, 87.2032, -3.95775e-05, -131.15, 0, 0, 0, 0, 0, 0, 59.6718, -3.95775e-05, -130.938, 0, 0, 0, 0, 0, 0, 36.8172, -3.95775e-05, -130.802, 0, 0, 0, 0, 0, 0, 6.82877, 1.55965, -130.048, 0, 0, 0, 0, 0, 0, -9.83829, 3.78301, -130.277, 0, 0, 0, 0, 0, 0, -25.7663, 5.7086, -130.044, 0, 0, 0, 0, 0, 0, -39.53, 7.50917, -128.81, 0, 0, 0, 0, 0, 0, -56.6142, 9.69661, -127.915, 0, 0, 0, 0, 0, 0, -65.3784, 10.6424, -123.935, 0, 0, 0, 0, 0, 0, -65.3784, 10.6424, -123.935, 0, 0, 0, 0, 0, 0, -74.9416, 11.4189, -116.011, 0, 0, 0, 0, 0, 0, -84.1269, 12.2543, -107.409, 0, 0, 0, 0, 0, 0, -101.513, 12.4698, -85.3438, 0, 0, 0, 0, 0, 0, -115.516, 13.1293, -69.7523, 0, 0, 0, 0, 0, 0, -122.69, 13.2455, -61.4287, 0, 0, 0, 0, 0, 0, -127.19, 11.5412, -51.1026, 0, 0, 0, 0, 0, 0, -138.407, 11.7235, -37.8472, 0, 0, 0, 0, 0, 0, -142.098, 8.83867, -27.364, 0, 0, 0, 0, 0, 0, -144.69, 6.50547, -11.2331, 0, 0, 0, 0, 0, 0, -140.95, 3.5328, -3.33499, 0, 0, 0, 0, 0, 0, -135.955, -3.95775e-05, 7.00095, 0, 0, 0, 0, 0, 0, -131.606, -3.95775e-05, 12.6459, 0, 0, 0, 0, 0, 0, -131.791, -3.95775e-05, 21.4372, 0, 0, 0, 0, 0, 0, -133.981, -3.95775e-05, 30.5242, 0, 0, 0, 0, 0, 0, -140.737, -3.95775e-05, 48.2918, 0, 0, 0, 0, 0, 0, -144.761, -3.95775e-05, 64.8081, 0, 0, 0, 0, 0, 0, -142.54, -3.95775e-05, 78.9667, 0, 0, 0, 0, 0, 0, -136.71, -3.95775e-05, 87.5729, 0, 0, 0, 0, 0, 0, -126.438, -3.95775e-05, 90.9043, 0, 0, 0, 0, 0, 0, -113.205, -3.95775e-05, 91.367, 0, 0, 0, 0, 0, 0, -83.513, 8.69338, 95.1095, 0, 0, 0, 0, 0, 0, -64.3418, 13.9058, 97.2997, 0, 0, 0, 0, 0, 0, -53.564, 15.5611, 98.8889, 0, 0, 0, 0, 0, 0, -43.5125, 15.9004, 99.2942, 0, 0, 0, 0, 0, 0, -34.7521, 14.2458, 100.443, 0, 0, 0, 0, 0, 0, -24.253, 14.6445, 101.31, 0, 0, 0, 0, 0, 0, -13.6211, 14.1529, 100.851, 0, 0, 0, 0, 0, 0, -1.92708, 7.56824, 97.5941, 0, 0, 0, 0, 0, 0, 4.98002, 4.08416, 93.86, 0, 0, 0, 0, 0, 0, 14.04, -3.95775e-05, 87.7417, 0, 0, 0, 0, 0, 0, 19.4073, -3.95775e-05, 80.0609, 0, 0, 0, 0, 0, 0, 21.1279, -3.95775e-05, 72.7838, 0, 0, 0, 0, 0, 0, 17.5789, -3.95775e-05, 58.2732, 0, 0, 0, 0, 0, 0, 16.8386, -3.95775e-05, 51.0551, 0, 0, 0, 0, 0, 0, 16.3833, -3.95775e-05, 41.2971, 0, 0, 0, 0, 0, 0, 13.364, -3.95775e-05, 30.0827, 0, 0, 0, 0, 0, 0, 9.05077, -3.95775e-05, 20.1622, 0, 0, 0, 0, 0, 0, 4.71316, -3.95775e-05, 9.62994, 0, 0, 0, 0, 0, 0, 4.98806, -3.62396e-05, 1.55519),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 135

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eu3i8"]
albedo_texture = ExtResource("3_uqlyr")
metallic = 0.27
metallic_specular = 0.13
normal_enabled = true
refraction_enabled = true
uv1_scale = Vector3(0.05, 1.42, 1)
uv1_offset = Vector3(0.834, -0.268, 0.229)
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0x7yf"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("4_dnrtc")
uv1_scale = Vector3(1, 2, 1)
uv1_offset = Vector3(0, 0.065, 0)

[node name="Game" type="Node3D"]
script = ExtResource("1_mmgml")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_btru4")

[node name="Chat" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 231.0
offset_top = 86.0
offset_right = 961.0
offset_bottom = 528.0

[node name="LineEdit" type="LineEdit" parent="Chat"]
layout_mode = 0
offset_left = -2.0
offset_top = 388.0
offset_right = 629.0
offset_bottom = 419.0

[node name="TextEdit" type="TextEdit" parent="Chat"]
layout_mode = 0
offset_right = 707.0
offset_bottom = 384.0
editable = false

[node name="SendMessage" type="Button" parent="Chat"]
layout_mode = 0
offset_left = 634.0
offset_top = 382.0
offset_right = 716.0
offset_bottom = 434.0
text = "OK
"

[node name="Close" type="Button" parent="Chat"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_bottom = 49.0
grow_horizontal = 0
text = "Close"

[node name="OpenChat" type="Button" parent="."]
visible = false
z_index = 1
offset_right = 81.0
offset_bottom = 40.0
text = "Chat"

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.535937, 8.85948, 2.6881)

[node name="Track" type="Node3D" parent="."]

[node name="Track" type="Path3D" parent="Track"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.15418, -1.05123, 3.17888)
curve = SubResource("Curve3D_ertb8")

[node name="Cerca1" type="Path3D" parent="Track"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50728, -1.05123, 2.92087)
curve = SubResource("Curve3D_1ye1o")

[node name="Cerca2" type="Path3D" parent="Track"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50728, -1.05123, 2.92087)
curve = SubResource("Curve3D_kqssp")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Track"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.21917, 0.154119, -0.226479)
use_collision = true
polygon = PackedVector2Array(-7.5, -20, -7.5, 0.2, 7.5, 0.2, 7.5, -20)
mode = 2
path_node = NodePath("../Track")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 1
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_eu3i8")

[node name="Cerca" type="CSGPolygon3D" parent="Track"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.45504, 0.154119, -0.226479)
use_collision = true
polygon = PackedVector2Array(0, -4, 0, 3, 1, 3, 1, -4)
mode = 2
path_node = NodePath("../Cerca1")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 1
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_0x7yf")

[node name="Cerca3" type="CSGPolygon3D" parent="Track"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.45504, 0.154119, -0.226479)
use_collision = true
polygon = PackedVector2Array(0, -4, 0, 3, 1, 3, 1, -4)
mode = 2
path_node = NodePath("../Cerca2")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 1
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_0x7yf")

[connection signal="pressed" from="Chat/SendMessage" to="." method="_on_send_message_pressed"]
[connection signal="pressed" from="Chat/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="OpenChat" to="." method="_on_open_chat_pressed"]
